@@ -92,6 +92,14 @@ Key and Group names are case-sensitive, for example a group called
 </itemizedlist>
 </para>
 
+<para>
+Note that in contrast to the
+<ulink url="http://freedesktop.org/Standards/desktop-entry-spec">Desktop
+Entry Specification</ulink>, groups in key files may contain the same
+key multiple times; the last entry wins. Key files may also contain
+multiple groups with the same name; they are merged together.
+</para>
+
 <!-- ##### SECTION See_Also ##### -->
 <para>
 
