@@ -1,3 +1,8 @@
+2006-12-14  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/tmpl/keyfile.sgml: Clarify the behaviour
+	wrt. to duplicate keys and groups.
+
 2006-12-13  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/tmpl/modules.sgml: Point out that valid symbols may be NULL.
